name:                nixos-multi-spawn
version:             0.1.0.0
author:              Rickard Nilsson
maintainer:          rickynils@gmail.com
license:             MIT
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10

executable nixos-multi-spawn
  main-is:             Main.hs
  extra-modules:       System.IO.TailFile
  ghc-options:         -Wall -threaded -O3
  build-depends:       base,
                       dataenc,
                       digest-pure,
                       bytestring,
                       directory,
                       filepath,
                       hinotify,
                       async,
                       aeson,
                       entropy,
                       process,
                       systemd,
                       concurrent-output,
                       unix,
                       unordered-containers
  default-language:    Haskell2010
